# frappe-mcps

./: .gitignore  README.md  compose.yaml  render.yaml
frappe-helpdesk/: .env.example  docker-compose.yaml
frappe-helpdesk/docker/: init-local.sh
frappe-helpdesk/helpdesk/: hooks.py
frappe-helpdesk/helpdesk-mcp/: pyproject.toml
frappe-helpdesk/helpdesk-mcp/app/: main.py  schemas.py
frappe-helpdesk/helpdesk-mcp/app/core/: config.py
frappe-helpdesk/helpdesk-mcp/app/routers/: helpdesk.py
frappe-helpdesk/helpdesk-mcp/app/services/: frappe_client.py
frappe-lending/: .env.example  .mergify.yml  Dockerfile.websocket  compose.yaml  docker-compose.yaml
frappe-lending/lending/: demo_seed.py  install.py  mcp_api.py  patches.txt
frappe-lending/lending-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
frappe-lending/lending-mcp/app/: main.py  mcp_apps.py
frappe-lending/lending-mcp/app/api/v1/routers/: lending.py
frappe-lending/lending-mcp/app/core/: config.py  platfom_integration_client.py
frappe-lending/lending-mcp/app/core/authentication/: auth_middleware.py  auth_token.py  hashing.py  role.py  subscription.py
frappe-lending/lending-mcp/app/schemas/: lending.py  token.py
frappe-lending/lending-mcp/app/services/: frappe_client.py
frappe-lending/lending-mcp/app/system/: license_server.py
frappe-lending/lending-mcp/app/ui/: loan_dashboard_page.py
frappe-lending/lending-mcp/ui-dashboard/: mcp-app.html  package-lock.json  package.json  vite.config.js
frappe-lending/lending-mcp/ui-dashboard/src/: main.js  styles.css
(+114 files in other folders)
