[project]
name = "lending-mcp"
version = "0.1.0"
description = "MCP layer for Frappe Lending"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "fastapi-mcp>=0.4.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
